# devsecops-guardian

./: .dockerignore  .gitignore  LICENSE  PROJECT_STATUS.md  README.md  azure-pipelines.yml  docker-compose.yml  run_pipeline.py
.github/: copilot-instructions.md
agents/: foundry_client.py  orchestrator.py  register_all_agents.py  setup_evaluations.py
agents/analyzer/: .env.example  analyzer.py  config.py  github_client.py  llm_engine.py  prompts.py
agents/compliance/: .env.example  compliance.py  config.py  llm_engine.py  prompts.py
agents/fixer/: .env.example  config.py  fixer.py  github_client.py  issue_creator.py  llm_engine.py  prompts.py
agents/risk-profiler/: .env.example  config.py  llm_engine.py  prompts.py  risk_profiler.py
agents/scanner/: .env.example  config.py  github_client.py  llm_engine.py  prompts.py  requirements.txt  scanner.py  smart_scan.py
api/: .env.example  Dockerfile  config.py  main.py  models.py  pipeline.py  requirements.txt  schemas.py  table_store.py
api/routers/: compliance.py  findings.py  health.py  practices.py  risk_profile.py  scans.py
dashboard/: .env.local.example  .npmrc  Dockerfile  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx
dashboard/lib/: api.ts  utils.ts
demo-app/: .env.example  README.md  banking.db  package-lock.json  package.json  seed.js  server.js
demo-app/config/: database.js
demo-app/middleware/: auth.js  (+1 more)
infra/: AZURE_RESOURCES.md
mcp-servers/github/: README.md  foundry_adapter.py  pyproject.toml  server.py  test_tools.py
tests/: verify_winning_features.py
(+32 files in other folders)
