[project]
name = "github-mcp-server"
version = "1.0.0"
description = "MCP Server for GitHub API - DevSecOps Guardian"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
